<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_ffffff_corner_10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reconnectButton"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:maxWidth="100dp"
            android:background="@drawable/shape_radio_group"
            style="@style/RadioButton"
            android:text="重连云手机"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f3f3f3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tv_positive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:text="@string/exit_phone"
            android:textColor="@color/selector_exit_button_text"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#f3f3f3" />

        <Button
            android:id="@+id/tv_negative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/selector_exit_button_text"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>