<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <com.huawei.cloudphone.widget.TopBar
        android:id="@+id/tb_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_menu="@drawable/ic_apps_black_24dp"
        app:tb_title="@string/login" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@drawable/ic_account"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:hint="@string/account_hint"
            android:inputType="text"
            android:padding="5dip"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/login"
            android:padding="5dp"
            android:src="@drawable/ic_clear" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorDarkGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@drawable/ic_password"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="5dip"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorDarkGray" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/selector_btn_submit"
        android:enabled="true"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_user_register"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/selector_btn_submit"
        android:enabled="true"
        android:text="@string/test"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textColor="#FF0000"
        android:textSize="12sp"
        tools:text="v 1.0.0" />
</LinearLayout>